dist/1.0/bin/sample/retrieveUnpackaged/objects/Credit_Checking_Settings__c.object
<CustomObject>
    <description>Object contains settings related to Credit Checking process</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <label>CustomerType</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalFlag__c</fullName>
        <label>FinalFlag</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parameters_CRM__c</fullName>
        <description>Parameters for processing CRM</description>
        <inlineHelpText>Parameters for processing CRM</inlineHelpText>
        <label>Parameters CRM</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parameters_Extranet__c</fullName>
        <label>Parameters Extranet</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <label>Profiles</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServicesRisk__c</fullName>
        <label>ServicesRisk</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sources__c</fullName>
        <label>Sources</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timers__c</fullName>
        <label>Timers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZBPAuthorization__c</fullName>
        <label>ZBPAuthorization</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Credit Checking Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCS{000000000}</displayFormat>
        <label>Settings No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Checking Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>